tests/semantic/snapshots/r#mod__semantic__type_collection__collect_multiple_types.snap
---
source: tests/semantic/type_collection.rs
expression: comp_state.type_registry
---
structs:
  0:
    name: Animal
    fields: []
    indices: {}
    instance_methods: []
    static_methods: []
    field_offsets: []
    total_size: 0
    alignment: 1
    range:
      start: 0
      end: 0
  1:
    name: Fish
    fields: []
    indices: {}
    instance_methods: []
    static_methods: []
    field_offsets: []
    total_size: 0
    alignment: 1
    range:
      start: 0
      end: 0
path_to_id:
  ? components:
      - symbol: Animal
  : 0
  ? components:
      - symbol: Fish
  : 1
