tests/semantic/snapshots/r#mod__semantic__type_collection__collect_single_type.snap
---
source: tests/semantic/type_collection.rs
expression: result
---
structs:
  0:
    name: Type
    fields: []
    indices: {}
    instance_methods: []
    static_methods: []
    field_offsets: []
    total_size: 0
    alignment: 1
    range:
      start: 0
      end: 14
path_to_id:
  ? components:
      - symbol: Type
  : 0
